Fix some bugs and add plans to snapshots
